[tool.poetry]
name = "hh20241106"
version = "0.1.0"
description = ""
authors = ["ʕ ᵔᴥᵔ ʔ <email@not.exists>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
pymysql = "^1.1.1"
fastapi = "^0.115.4"
python-multipart = "^0.0.17"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
